--- a/imports/client/styles/components/_page-content.scss
+++ b/imports/client/styles/components/_page-content.scss
@@ -1,5 +1,11 @@
 .page-content {
   max-width:$site-max-width;
-  margin: 0 auto;
   padding: $space;
+}
+
+.page-content--top {
+    max-width:none;
+    display:flex;
+    justify-content: space-between;
+
 }
